crates/tui/src/bottom_pane/snapshots/savfox_tui__bottom_pane__chat_composer__tests__footer_collapse_plan_empty_mode_cycle_with_context.snap
---
source: crates/tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                            "
"────────────────────────────────────────────────────────────"
"❯ Type @ to mention files, / for commands, or ? for shortcu "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"────────────────────────────────────────────────────────────"
"  Plan mode (shift+tab to cycle)         100% context left  "
